# pyrsgis

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  LICENSE.txt  README.md  docs_requirements.txt  docs_requirements_setuptools.txt  environment.yml  generate_requirements.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publishpypi.yml
docs/: Makefile  README.md  api.rst  builddocs.sh  conf.py  index.rst  installation.rst  requirements.txt  rtd_env.yml
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/pyrsgis/: raster.html
docs/_build/html/_sources/: api.rst.txt  index.rst.txt  installation.rst.txt
docs/_build/html/_static/: documentation_options.js
pyrsgis/: __init__.py  raster.py
pyrsgis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyrsgis/beta/: __init__.py
pyrsgis/convert/: __init__.py
pyrsgis/ml/: __init__.py
pyrsgis/raster/: __init__.py
pyrsgis/tests/: test_raster.py
pyrsgis/tests/data/: raster_multiband.tif  raster_singleband_continuous.tif  raster_singleband_discrete.tif
pyrsgis/utils/: __init__.py
