[project]
name = "pyrsgis"
version = "0.4.2b1"
description = "A Python package for remote sensing and GIS applications"
readme = "README.md"
license = "MIT"
authors = [
  { name = "Pratyush Tripathy", email = "pratkrt@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "matplotlib",
  "gdal>=3.0.0"
]

[tool.setuptools]
license-files = []

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: GIS",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/PratyushTripathy/pyrsgis"
Issues = "https://github.com/PratyushTripathy/pyrsgis/issues"

[tool.setuptools]
license-files = ["LICENSE"]

[build-system]
requires = ["setuptools>=69.0.2", "wheel"]
build-backend = "setuptools.build_meta"
