[project]
name = "pyrsgis"
version = "0.4.2b1"
description = "A Python package for remote sensing and GIS applications"
readme = "README.md"
license = {text="MIT"}
authors = [
  { name = "Pratyush Tripathy", email = "pratkrt@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "matplotlib",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: GIS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent"
]

[project.optional-dependencies]
geo = [
  "gdal>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyrsgis*"]
exclude = ["media*", "docs*", "dist*"]

[tool.setuptools.package-data]
"pyrsgis" = ["pyrsgis/tests/data*"]

[project.urls]
Homepage = "https://github.com/PratyushTripathy/pyrsgis"
Issues = "https://github.com/PratyushTripathy/pyrsgis/issues"

[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = []